--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
         </div>
         <div class="footer-column">
           <h4>Contact Us</h4>
-          <p><i class="fas fa-map-marker-alt"></i> Address: [Your Actual Company Address Here, e.g., 123 Nile St, Cairo, Egypt]</p>
-          <p><i class="fas fa-phone"></i> Phone: <a href="tel:+201234567890">+20 123 456 7890</a></p>
-          <p><i class="fas fa-envelope"></i> Email: <a href="mailto:info@yourwebsite.com">info@yourwebsite.com</a></p>
+          <p><i class="fas fa-map-marker-alt"></i> Address: 10th of Ramadan, Sharqia, Egypt</p>
+          <p><i class="fas fa-phone"></i> Phone: <a href="tel:+201011766232">+20 101 176 6232</a></p>
+          <p><i class="fas fa-envelope"></i> Email: <a href="mailto:info@yourwebsite.com">info@egy-uae.com</a></p>
         </div>
         <div class="footer-column">
           <h4>Follow Us</h4>
