--- a/contact.html
+++ b/contact.html
@@ -14,17 +14,17 @@
     ul{list-style:none;}
 
     /* Header */
-    header{background:linear-gradient(90deg,#d32f2f,#b71c1c);padding:1rem 0;color:#fff;box-shadow:0 3px 6px rgba(0,0,0,0.2);}
+    header{background:linear-gradient(90deg,#1976d2,#0d47a1);padding:1rem 0;color:#fff;box-shadow:0 3px 6px rgba(0,0,0,0.2);}
     .container{width:90%;max-width:1200px;margin:auto;}
     header .logo{font-size:1.5rem;font-weight:700;}
     nav ul{display:flex;gap:1.5rem;justify-content:flex-end;}
     nav ul li a{color:#fff;font-weight:600;transition:color 0.3s;}
-    nav ul li a:hover,nav ul li a.active{color:#ffccbc;}
+    nav ul li a:hover,nav ul li a.active{color:#bbdefb;}
     header .container{display:flex;justify-content:space-between;align-items:center;}
 
     /* Contact Section */
     .contact{padding:3rem 0;}
-    .contact h2{text-align:center;font-size:2rem;margin-bottom:1rem;color:#b71c1c;}
+    .contact h2{text-align:center;font-size:2rem;margin-bottom:1rem;color:#0d47a1;}
     .contact p{text-align:center;margin-bottom:2rem;color:#555;}
     .contact-grid{display:grid;grid-template-columns:1fr 1fr;gap:2rem;}
     .contact-form,.contact-info{background:#fff;padding:2rem;border-radius:12px;box-shadow:0 4px 10px rgba(0,0,0,0.1);}
@@ -32,14 +32,14 @@
     /* Form */
     form label{display:block;margin:0.8rem 0 0.3rem;font-weight:600;}
     form input,form textarea{width:100%;padding:0.8rem;border:1px solid #ccc;border-radius:8px;margin-bottom:1rem;transition:0.3s;}
-    form input:focus,form textarea:focus{border-color:#b71c1c;outline:none;}
-    .btn{background:#b71c1c;color:#fff;padding:0.8rem 1.5rem;border:none;border-radius:8px;cursor:pointer;font-weight:600;transition:background 0.3s;}
-    .btn:hover{background:#d32f2f;}
+    form input:focus,form textarea:focus{border-color:#0d47a1;outline:none;}
+    .btn{background:#0d47a1;color:#fff;padding:0.8rem 1.5rem;border:none;border-radius:8px;cursor:pointer;font-weight:600;transition:background 0.3s;}
+    .btn:hover{background:#1976d2;}
 
     /* Contact Info */
-    .contact-info h3{margin-bottom:1rem;color:#b71c1c;}
+    .contact-info h3{margin-bottom:1rem;color:#0d47a1;}
     .contact-info p{margin-bottom:1rem;display:flex;align-items:center;gap:0.6rem;}
-    .contact-info i{color:#b71c1c;font-size:1.2rem;}
+    .contact-info i{color:#0d47a1;font-size:1.2rem;}
 
     /* Footer */
     footer{background:#222;color:#aaa;padding:1rem 0;text-align:center;margin-top:2rem;}
