--- a/contact.html
+++ b/contact.html
@@ -13,33 +13,60 @@
     a{text-decoration:none;color:inherit;}
     ul{list-style:none;}
 
+    /* Animations */
+    @keyframes fadeSlideDown {
+      0% {opacity:0;transform:translateY(-30px);}
+      100% {opacity:1;transform:translateY(0);}
+    }
+    @keyframes fadeIn {
+      0% {opacity:0;transform:translateY(20px);}
+      100% {opacity:1;transform:translateY(0);}
+    }
+    @keyframes iconBounce {
+      0%,100% {transform:translateY(0);}
+      50% {transform:translateY(-4px);}
+    }
+
     /* Header */
-    header{background:linear-gradient(90deg,#1976d2,#0d47a1);padding:1rem 0;color:#fff;box-shadow:0 3px 6px rgba(0,0,0,0.2);}
+    header{background:linear-gradient(90deg,#1976d2,#0d47a1);padding:1rem 0;color:#fff;
+      box-shadow:0 3px 6px rgba(0,0,0,0.2);animation:fadeSlideDown 0.8s ease;}
     .container{width:90%;max-width:1200px;margin:auto;}
     header .logo{font-size:1.5rem;font-weight:700;}
     nav ul{display:flex;gap:1.5rem;justify-content:flex-end;}
-    nav ul li a{color:#fff;font-weight:600;transition:color 0.3s;}
-    nav ul li a:hover,nav ul li a.active{color:#bbdefb;}
+    nav ul li a{color:#fff;font-weight:600;position:relative;padding-bottom:4px;}
+    nav ul li a::after{
+      content:"";position:absolute;left:0;bottom:0;width:0;height:2px;background:#bbdefb;
+      transition:width 0.3s ease;
+    }
+    nav ul li a:hover::after,nav ul li a.active::after{width:100%;}
+
     header .container{display:flex;justify-content:space-between;align-items:center;}
 
     /* Contact Section */
     .contact{padding:3rem 0;}
-    .contact h2{text-align:center;font-size:2rem;margin-bottom:1rem;color:#0d47a1;}
-    .contact p{text-align:center;margin-bottom:2rem;color:#555;}
+    .contact h2{text-align:center;font-size:2rem;margin-bottom:1rem;color:#0d47a1;
+      animation:fadeIn 1s ease;}
+    .contact p{text-align:center;margin-bottom:2rem;color:#555;animation:fadeIn 1.3s ease;}
     .contact-grid{display:grid;grid-template-columns:1fr 1fr;gap:2rem;}
-    .contact-form,.contact-info{background:#fff;padding:2rem;border-radius:12px;box-shadow:0 4px 10px rgba(0,0,0,0.1);}
+    .contact-form,.contact-info{background:#fff;padding:2rem;border-radius:12px;
+      box-shadow:0 4px 10px rgba(0,0,0,0.1);animation:fadeIn 1.6s ease;}
 
     /* Form */
     form label{display:block;margin:0.8rem 0 0.3rem;font-weight:600;}
-    form input,form textarea{width:100%;padding:0.8rem;border:1px solid #ccc;border-radius:8px;margin-bottom:1rem;transition:0.3s;}
+    form input,form textarea{width:100%;padding:0.8rem;border:1px solid #ccc;border-radius:8px;
+      margin-bottom:1rem;transition:0.3s;}
     form input:focus,form textarea:focus{border-color:#0d47a1;outline:none;}
-    .btn{background:#0d47a1;color:#fff;padding:0.8rem 1.5rem;border:none;border-radius:8px;cursor:pointer;font-weight:600;transition:background 0.3s;}
-    .btn:hover{background:#1976d2;}
+    .btn{background:#0d47a1;color:#fff;padding:0.8rem 1.5rem;border:none;border-radius:8px;
+      cursor:pointer;font-weight:600;transition:background 0.3s, transform 0.2s;}
+    .btn:hover{background:#1976d2;transform:scale(1.05);}
 
     /* Contact Info */
     .contact-info h3{margin-bottom:1rem;color:#0d47a1;}
-    .contact-info p{margin-bottom:1rem;display:flex;align-items:center;gap:0.6rem;}
-    .contact-info i{color:#0d47a1;font-size:1.2rem;}
+    .contact-info p{margin-bottom:1rem;display:flex;align-items:center;gap:0.6rem;
+      transition:transform 0.3s;}
+    .contact-info p:hover{transform:translateX(5px);}
+    .contact-info i{color:#0d47a1;font-size:1.2rem;transition:0.3s;}
+    .contact-info p:hover i{animation:iconBounce 0.6s;}
 
     /* Footer */
     footer{background:#222;color:#aaa;padding:1rem 0;text-align:center;margin-top:2rem;}
