--- a/faqs.html
+++ b/faqs.html
@@ -4,49 +4,64 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FAQs - Al Massria Al Emaratia</title>
-  
-  <!-- SEO -->
-  <meta name="description" content="Find answers to frequently asked questions about Al Massria Al Emaratia, an international import, export, and commercial agency company." />
-  <meta name="keywords" content="Al Massria Al Emaratia, import, export, trading, commercial agency, Egypt, UAE, FAQs" />
-  <meta name="author" content="Al Massria Al Emaratia" />
-  
-  <!-- Open Graph -->
-  <meta property="og:title" content="FAQs - Al Massria Al Emaratia" />
-  <meta property="og:description" content="Find answers to frequently asked questions about Al Massria Al Emaratia's import, export, and trading services." />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://www.egy-uae.com/faqs.html" />
-  <meta property="og:image" content="https://www.egy-uae.com/assets/images/logo.png" />
-  
-  <!-- Styles -->
+  <!-- Font & Icons -->
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
-    * {margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, sans-serif;}
-    body {background: #f9f9f9; color: #333; line-height: 1.6;}
-    .container {width: 90%; max-width: 1200px; margin: auto;}
-
-    header {background: #0056b3; padding: 15px 0; color: #fff; position: sticky; top: 0; z-index: 1000;}
-    .logo {font-size: 1.5rem; font-weight: bold;}
-    nav ul {list-style: none; display: flex; gap: 20px;}
-    nav ul li a {color: #fff; text-decoration: none; font-weight: 500; transition: 0.3s;}
-    nav ul li a:hover, nav ul li a.active {color: #ffcc00;}
-
-    /* FAQ Section */
-    .faq-section {padding: 50px 0;}
-    .faq-section h2 {text-align: center; font-size: 2rem; margin-bottom: 20px; color: #0056b3;}
-    .faq-item {background: #fff; margin: 10px 0; padding: 20px; border-radius: 8px; box-shadow: 0 3px 6px rgba(0,0,0,0.1); transition: transform 0.3s;}
-    .faq-item:hover {transform: translateY(-3px);}
-    .faq-question {font-weight: bold; font-size: 1.1rem; cursor: pointer; display: flex; align-items: center; justify-content: space-between;}
-    .faq-answer {margin-top: 10px; display: none; color: #444;}
-
-    /* Footer */
-    footer {background: #0056b3; color: #fff; text-align: center; padding: 15px; margin-top: 50px;}
-    footer p {margin: 5px 0;}
-    footer a {color: #ffcc00; text-decoration: none;}
+    * {margin:0;padding:0;box-sizing:border-box;font-family:"Cairo",sans-serif;}
+    body {background:#f7f9fc;color:#333;line-height:1.6;}
+    a{text-decoration:none;color:inherit;}
+    ul{list-style:none;}
 
     /* Animations */
-    nav ul li a {position: relative;}
-    nav ul li a::after {content: ''; position: absolute; width: 0; height: 2px; bottom: -5px; left: 0; background: #ffcc00; transition: 0.3s;}
-    nav ul li a:hover::after {width: 100%;}
+    @keyframes fadeSlideDown {
+      0% {opacity:0;transform:translateY(-30px);}
+      100% {opacity:1;transform:translateY(0);}
+    }
+    @keyframes fadeIn {
+      0% {opacity:0;transform:translateY(20px);}
+      100% {opacity:1;transform:translateY(0);}
+    }
+    @keyframes iconBounce {
+      0%,100% {transform:translateY(0);}
+      50% {transform:translateY(-4px);}
+    }
 
+    /* Header */
+    header{background:linear-gradient(90deg,#1976d2,#0d47a1);padding:1rem 0;color:#fff;
+      box-shadow:0 3px 6px rgba(0,0,0,0.2);animation:fadeSlideDown 0.8s ease;}
+    .container{width:90%;max-width:1200px;margin:auto;}
+    header .logo{font-size:1.5rem;font-weight:700;}
+    nav ul{display:flex;gap:1.5rem;justify-content:flex-end;}
+    nav ul li a{color:#fff;font-weight:600;position:relative;padding-bottom:4px;}
+    nav ul li a::after{
+      content:"";position:absolute;left:0;bottom:0;width:0;height:2px;background:#bbdefb;
+      transition:width 0.3s ease;
+    }
+    nav ul li a:hover::after,nav ul li a.active::after{width:100%;}
+
+    header .container{display:flex;justify-content:space-between;align-items:center;}
+
+    /* FAQ Section */
+    .faq{padding:3rem 0;}
+    .faq h2{text-align:center;font-size:2rem;margin-bottom:1rem;color:#0d47a1;animation:fadeIn 1s ease;}
+    .faq p{text-align:center;margin-bottom:2rem;color:#555;animation:fadeIn 1.3s ease;}
+
+    .faq-item{background:#fff;margin:1rem 0;padding:1rem 1.5rem;border-radius:10px;
+      box-shadow:0 4px 8px rgba(0,0,0,0.08);cursor:pointer;transition:transform 0.3s;}
+    .faq-item:hover{transform:translateX(5px);}
+    .faq-question{display:flex;justify-content:space-between;align-items:center;font-weight:600;color:#0d47a1;}
+    .faq-answer{display:none;margin-top:0.8rem;color:#444;}
+
+    /* Footer */
+    footer{background:#222;color:#aaa;padding:1rem 0;text-align:center;margin-top:2rem;}
+    footer p{font-size:0.9rem;}
+
+    /* Responsive */
+    @media(max-width:768px){
+      nav ul{flex-direction:column;gap:0.5rem;}
+      header .container{flex-direction:column;align-items:flex-start;}
+    }
   </style>
 </head>
 <body>
@@ -67,33 +82,49 @@
   </header>
 
   <!-- FAQ Section -->
-  <section class="faq-section">
+  <section class="faq">
     <div class="container">
       <h2>Frequently Asked Questions</h2>
+      <p>Find answers to the most common questions about Al Massria Al Emaratia and our services.</p>
 
       <div class="faq-item">
-        <div class="faq-question">What services does Al Massria Al Emaratia provide? <span>+</span></div>
-        <div class="faq-answer">We specialize in import, export, and commercial agency services, connecting businesses in Egypt, the UAE, and worldwide.</div>
+        <div class="faq-question">
+          <span><i class="fa-solid fa-briefcase"></i> What services do you provide?</span>
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="faq-answer">We provide import, export, and commercial agency services, connecting businesses across Egypt, the UAE, and international markets.</div>
       </div>
 
       <div class="faq-item">
-        <div class="faq-question">Where is your main office located? <span>+</span></div>
+        <div class="faq-question">
+          <span><i class="fa-solid fa-location-dot"></i> Where is your company located?</span>
+          <i class="fa-solid fa-plus"></i>
+        </div>
         <div class="faq-answer">Our head office is located in 10th of Ramadan City, Al Sharqia, Egypt.</div>
       </div>
 
       <div class="faq-item">
-        <div class="faq-question">How can I become a business partner? <span>+</span></div>
-        <div class="faq-answer">You can reach out via our Contact page or email us directly at info@egy-uae.com. Our team will guide you through the partnership process.</div>
+        <div class="faq-question">
+          <span><i class="fa-solid fa-handshake"></i> How can I become a business partner?</span>
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="faq-answer">You can reach us through our Contact page or by emailing info@egy-uae.com. Our team will guide you through the partnership process.</div>
       </div>
 
       <div class="faq-item">
-        <div class="faq-question">Do you support international shipping? <span>+</span></div>
-        <div class="faq-answer">Yes, we handle international trade operations, ensuring smooth logistics for imports and exports across multiple regions.</div>
+        <div class="faq-question">
+          <span><i class="fa-solid fa-ship"></i> Do you manage international shipping?</span>
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="faq-answer">Yes, we handle international logistics to ensure smooth operations for imports and exports worldwide.</div>
       </div>
 
       <div class="faq-item">
-        <div class="faq-question">What makes Al Massria Al Emaratia different? <span>+</span></div>
-        <div class="faq-answer">We combine years of experience, strong regional partnerships, and a global trade network to provide reliable, efficient, and transparent services.</div>
+        <div class="faq-question">
+          <span><i class="fa-solid fa-star"></i> Why choose Al Massria Al Emaratia?</span>
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="faq-answer">We combine regional expertise, strong global partnerships, and years of experience to deliver efficient and reliable trade solutions.</div>
       </div>
     </div>
   </section>
@@ -102,23 +133,30 @@
   <footer>
     <div class="container">
       <p>&copy; 2025 Al Massria Al Emaratia. All Rights Reserved.</p>
-      <p>Support: <a href="tel:+201013378572">+20 101 337 8572</a></p>
     </div>
   </footer>
 
   <!-- Script -->
   <script>
-    const questions = document.querySelectorAll(".faq-question");
-    questions.forEach(q => {
-      q.addEventListener("click", () => {
-        const answer = q.nextElementSibling;
-        const symbol = q.querySelector("span");
-        if (answer.style.display === "block") {
-          answer.style.display = "none";
-          symbol.textContent = "+";
-        } else {
+    const faqItems = document.querySelectorAll(".faq-item");
+    faqItems.forEach(item => {
+      const question = item.querySelector(".faq-question");
+      question.addEventListener("click", () => {
+        const answer = item.querySelector(".faq-answer");
+        const icon = question.querySelector("i.fa-solid.fa-plus, i.fa-solid.fa-minus");
+        const isOpen = answer.style.display === "block";
+
+        // Close all
+        document.querySelectorAll(".faq-answer").forEach(a => a.style.display = "none");
+        document.querySelectorAll(".faq-question i.fa-minus").forEach(i => {
+          i.classList.remove("fa-minus");
+          i.classList.add("fa-plus");
+        });
+
+        if (!isOpen) {
           answer.style.display = "block";
-          symbol.textContent = "-";
+          icon.classList.remove("fa-plus");
+          icon.classList.add("fa-minus");
         }
       });
     });
