--- a/about.html
+++ b/about.html
@@ -1,202 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us | Al Massria Al Emaratia</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Contact Us - Al Massria Al Emaratia</title>
   
-  <!-- SEO Meta Tags -->
-  <meta name="description" content="Al Massria Al Emaratia is a global import, export, and commercial agency company based in Egypt and the UAE. Learn about our vision, mission, and innovative platforms like amae.cloud and MEtrade.cloud.">
-  <meta name="keywords" content="Al Massria Al Emaratia, import export Egypt UAE, commercial agency, amae.cloud, MEtrade.cloud, international trade, logistics">
-  <meta name="author" content="Al Massria Al Emaratia">
-
-  <!-- Open Graph for Social Media -->
-  <meta property="og:title" content="About Us | Al Massria Al Emaratia">
-  <meta property="og:description" content="Global import & export solutions, trusted trade partner, and cloud-powered platforms for businesses worldwide.">
-  <meta property="og:image" content="assets/img/about-us.jpg">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.egy-uae.com/about.html">
-
-  <!-- Icons -->
+  <!-- Font & Icons -->
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
-  <!-- Styles -->
+  
   <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      line-height: 1.6;
-      background: #f9fbfd;
-      color: #333;
-    }
-
-    /* Navbar */
-    header {
-      background: #004aad;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-    }
-    .navbar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 15px 10%;
-    }
-    .navbar .logo a {
-      color: #fff;
-      font-size: 1.5rem;
-      font-weight: bold;
-      text-decoration: none;
-      transition: transform 0.3s ease;
-    }
-    .navbar .logo a:hover {
-      transform: scale(1.1);
-    }
-    .nav-links {
-      list-style: none;
-      display: flex;
-      gap: 20px;
-    }
-    .nav-links li a {
-      color: #fff;
-      text-decoration: none;
-      font-weight: 500;
-      transition: color 0.3s ease, transform 0.3s ease;
-    }
-    .nav-links li a:hover,
-    .nav-links li a.active {
-      color: #ffdd57;
-      transform: translateY(-3px);
-    }
-
-    /* Hero Section */
-    .hero {
-      text-align: center;
-      padding: 80px 20px;
-      background: linear-gradient(to right, #004aad, #0073e6);
-      color: #fff;
-      animation: fadeIn 1.5s ease-in-out;
-    }
-    .hero h1 {
-      font-size: 2.5rem;
-      margin-bottom: 10px;
-    }
-    .hero p {
-      font-size: 1.2rem;
-    }
-
-    /* About Section */
-    .about-content {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      align-items: center;
-      gap: 30px;
-      padding: 60px 10%;
-    }
-    .about-content .text h2 {
-      font-size: 1.8rem;
-      margin-bottom: 10px;
-      color: #004aad;
-      display: flex;
-      align-items: center;
-      gap: 10px;
-    }
-    .about-content .text h2 i {
-      color: #0073e6;
-    }
-    .about-content .text p {
-      margin-bottom: 20px;
-    }
-    .about-content .image img {
-      width: 100%;
-      border-radius: 15px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-      transition: transform 0.4s ease;
-    }
-    .about-content .image img:hover {
-      transform: scale(1.05);
-    }
-
-    /* Footer */
-    footer {
-      background: #004aad;
-      color: #fff;
-      text-align: center;
-      padding: 20px 10px;
-      font-size: 0.9rem;
-    }
-    footer p {
-      margin: 5px 0;
-    }
-    footer .support {
-      margin-top: 10px;
-    }
-    footer .support i {
-      margin-right: 8px;
-    }
+    * {margin:0;padding:0;box-sizing:border-box;font-family:"Cairo",sans-serif;}
+    body {background:#f7f9fc;color:#333;line-height:1.6;}
+    a{text-decoration:none;color:inherit;}
+    ul{list-style:none;}
 
     /* Animations */
+    @keyframes fadeSlideDown {
+      0% {opacity:0;transform:translateY(-30px);}
+      100% {opacity:1;transform:translateY(0);}
+    }
     @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(30px); }
-      to { opacity: 1; transform: translateY(0); }
+      0% {opacity:0;transform:translateY(20px);}
+      100% {opacity:1;transform:translateY(0);}
+    }
+    @keyframes iconBounce {
+      0%,100% {transform:translateY(0);}
+      50% {transform:translateY(-4px);}
+    }
+
+    /* Header */
+    header {
+      background:linear-gradient(90deg,#1976d2,#0d47a1);
+      padding:1rem 0;
+      color:#fff;
+      box-shadow:0 3px 6px rgba(0,0,0,0.2);
+      animation:fadeSlideDown 0.8s ease;
+    }
+    .container {width:90%;max-width:1200px;margin:auto;}
+    header .logo {font-size:1.4rem;font-weight:700;}
+    nav ul {display:flex;gap:1.5rem;justify-content:flex-end;}
+    nav ul li a {
+      color:#fff;font-weight:600;position:relative;padding-bottom:4px;
+    }
+    nav ul li a::after {
+      content:"";position:absolute;left:0;bottom:0;width:0;height:2px;background:#bbdefb;
+      transition:width 0.3s ease;
+    }
+    nav ul li a:hover::after,nav ul li a.active::after {width:100%;}
+    header .container {display:flex;justify-content:space-between;align-items:center;}
+
+    /* Contact Section */
+    .contact {padding:3rem 0;}
+    .contact h2 {
+      text-align:center;font-size:2rem;margin-bottom:1rem;color:#0d47a1;
+      animation:fadeIn 1s ease;
+    }
+    .contact p {
+      text-align:center;margin-bottom:2rem;color:#555;animation:fadeIn 1.3s ease;
+    }
+    .contact-grid {
+      display:grid;grid-template-columns:1fr 1fr;gap:2rem;
+    }
+    .contact-form,.contact-info {
+      background:#fff;padding:2rem;border-radius:12px;
+      box-shadow:0 4px 10px rgba(0,0,0,0.1);animation:fadeIn 1.6s ease;
+    }
+
+    /* Form */
+    form label {display:block;margin:0.8rem 0 0.3rem;font-weight:600;}
+    form input,form textarea {
+      width:100%;padding:0.8rem;border:1px solid #ccc;border-radius:8px;
+      margin-bottom:1rem;transition:0.3s;
+    }
+    form input:focus,form textarea:focus {
+      border-color:#0d47a1;outline:none;
+    }
+    .btn {
+      background:#0d47a1;color:#fff;padding:0.8rem 1.5rem;border:none;border-radius:8px;
+      cursor:pointer;font-weight:600;transition:background 0.3s, transform 0.2s;
+    }
+    .btn:hover {background:#1976d2;transform:scale(1.05);}
+
+    /* Contact Info */
+    .contact-info h3 {margin-bottom:1rem;color:#0d47a1;}
+    .contact-info p {
+      margin-bottom:1rem;display:flex;align-items:center;gap:0.6rem;
+      transition:transform 0.3s;
+    }
+    .contact-info p:hover {transform:translateX(5px);}
+    .contact-info i {color:#0d47a1;font-size:1.2rem;transition:0.3s;}
+    .contact-info p:hover i {animation:iconBounce 0.6s;}
+
+    /* Footer */
+    footer {background:#222;color:#aaa;padding:1rem 0;text-align:center;margin-top:2rem;}
+    footer p {font-size:0.9rem;}
+
+    /* Responsive */
+    @media(max-width:768px){
+      .contact-grid {grid-template-columns:1fr;}
+      nav ul {flex-direction:column;gap:0.5rem;}
+      header .container {flex-direction:column;align-items:flex-start;}
     }
   </style>
 </head>
 <body>
   <!-- Header -->
   <header>
-    <nav class="navbar">
-      <div class="logo"><a href="index.html">AME</a></div>
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html" class="active">About</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="faqs.html">FAQs</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
+    <div class="container">
+      <h1 class="logo">Al Massria Al Emaratia</h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="faqs.html">FAQs</a></li>
+          <li><a href="contact.html" class="active">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
-  <!-- Hero Section -->
-  <section class="hero">
-    <h1>About Us</h1>
-    <p>Discover the story, vision, and mission of Al Massria Al Emaratia.</p>
-  </section>
+  <!-- Contact Section -->
+  <section class="contact">
+    <div class="container">
+      <h2>Contact Us</h2>
+      <p>We’d love to hear from you. Get in touch with us through the form below or via our contact details.</p>
+      
+      <div class="contact-grid">
+        <!-- Contact Form -->
+        <div class="contact-form">
+          <form action="mailto:info@egy-uae.com" method="POST" enctype="text/plain">
+            <label for="name">Full Name</label>
+            <input type="text" id="name" name="Full Name" placeholder="Enter your name" required />
 
-  <!-- Main Content -->
-  <section class="about-content">
-    <div class="text">
-      <h2><i class="fas fa-building"></i> Who We Are</h2>
-      <p>
-        Al Massria Al Emaratia for Import, Export, and Commercial Agencies was founded in 2020.  
-        Our company operates globally, specializing in trade solutions, logistics, and partnership development.  
-        We provide clients with reliable, cloud-powered platforms like <strong>amae.cloud</strong> and <strong>MEtrade.cloud</strong>  
-        to streamline operations and expand their business reach.
-      </p>
+            <label for="email">Email Address</label>
+            <input type="email" id="email" name="Email" placeholder="Enter your email" required />
 
-      <h2><i class="fas fa-lightbulb"></i> Our Vision</h2>
-      <p>
-        To be a trusted international trade partner, empowering businesses with seamless solutions  
-        and a strong community built on trust and collaboration.
-      </p>
+            <label for="message">Message</label>
+            <textarea id="message" name="Message" rows="5" placeholder="Write your message..." required></textarea>
 
-      <h2><i class="fas fa-bullseye"></i> Our Mission</h2>
-      <p>
-        Deliver world-class import and export services supported by advanced digital platforms,  
-        while fostering growth opportunities for individuals, factories, and companies worldwide.
-      </p>
-    </div>
+            <button type="submit" class="btn"><i class="fa-solid fa-paper-plane"></i> Send Message</button>
+          </form>
+        </div>
 
-    <div class="image">
-      <img src="assets/img/about-us.jpg" alt="About Al Massria Al Emaratia">
+        <!-- Contact Info -->
+        <div class="contact-info">
+          <h3>Our Contact Details</h3>
+          <p><i class="fa-solid fa-location-dot"></i> <strong>Address:</strong> 10th of Ramadan, Al Sharqia, Egypt</p>
+          <p><i class="fa-solid fa-phone"></i> <strong>Phone:</strong> +20 101 176 6232</p>
+          <p><i class="fa-solid fa-envelope"></i> <strong>Email:</strong> info@egy-uae.com</p>
+          <p><i class="fa-solid fa-globe"></i> <strong>Website:</strong> www.egy-uae.com</p>
+          <p><i class="fa-brands fa-whatsapp"></i> <strong>Support:</strong> +20 101 337 8572</p>
+        </div>
+      </div>
     </div>
   </section>
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Al Massria Al Emaratia. All Rights Reserved.</p>
-    <div class="support"><i class="fas fa-headset"></i> Support: +20 101 337 8572</div>
+    <div class="container">
+      <p>&copy; 2025 Al Massria Al Emaratia. All Rights Reserved.</p>
+    </div>
   </footer>
 </body>
 </html>
