--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
   <meta name="keywords" content="Al Massria Al Emaratia, import export Egypt UAE, international trade, logistics, commercial agencies, global business">
   <meta name="author" content="Al Massria Al Emaratia">
 
-  <!-- Open Graph (Social Media) -->
+  <!-- Open Graph -->
   <meta property="og:title" content="About Us | Al Massria Al Emaratia">
   <meta property="og:description" content="Learn more about Al Massria Al Emaratia, a global leader in import, export, and commercial agencies.">
   <meta property="og:image" content="https://images.unsplash.com/photo-1605902711622-cfb43c4437d7?w=800">
@@ -19,55 +19,110 @@
 
   <!-- Icons & Fonts -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
 
   <style>
-    /* General Reset */
-    * {margin: 0; padding: 0; box-sizing: border-box;}
-    body {font-family: 'Roboto', sans-serif; line-height: 1.6; color: #333; background: #f9f9f9;}
+    *{margin:0;padding:0;box-sizing:border-box;font-family:"Cairo",sans-serif;}
+    body{line-height:1.6;color:#333;background:#f9f9f9;}
 
-    /* Navbar */
-    header {background: #004aad; padding: 15px 0; position: sticky; top: 0; z-index: 1000;}
-    .navbar {width: 90%; margin: auto; display: flex; justify-content: space-between; align-items: center;}
-    .navbar .logo a {color: #fff; font-size: 24px; font-weight: bold; text-decoration: none;}
-    .nav-links {list-style: none; display: flex; gap: 20px;}
-    .nav-links li a {color: #fff; text-decoration: none; font-weight: 500; transition: 0.3s;}
-    .nav-links li a:hover, .nav-links li a.active {color: #ffdd57;}
+    /* Header */
+    header{
+      background:linear-gradient(90deg,#1976d2,#0d47a1);
+      padding:1rem 0;
+      color:#fff;
+      box-shadow:0 3px 6px rgba(0,0,0,0.2);
+    }
+    .navbar{
+      width:90%;
+      margin:auto;
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      flex-wrap:wrap;
+    }
+    .navbar .logo a{color:#fff;font-size:1.5rem;font-weight:700;text-decoration:none;}
+    .nav-links{list-style:none;display:flex;gap:1.5rem;}
+    .nav-links li a{
+      color:#fff;
+      font-weight:600;
+      position:relative;
+      padding-bottom:4px;
+      transition:0.3s;
+    }
+    .nav-links li a::after{
+      content:"";
+      position:absolute;
+      left:0;
+      bottom:0;
+      width:0;
+      height:2px;
+      background:#bbdefb;
+      transition:width 0.3s ease;
+    }
+    .nav-links li a:hover::after,
+    .nav-links li a.active::after{width:100%;}
 
-    /* Hero Section */
-    .hero {background: url('https://images.unsplash.com/photo-1505839673365-e3971f8d9184?w=1200') center/cover no-repeat; 
-           color: #fff; text-align: center; padding: 100px 20px; animation: fadeIn 1.5s;}
-    .hero h1 {font-size: 48px; margin-bottom: 10px;}
-    .hero p {font-size: 20px; max-width: 700px; margin: auto;}
+    /* Hero */
+    .hero{
+      background:url('https://images.unsplash.com/photo-1505839673365-e3971f8d9184?w=1200') center/cover no-repeat;
+      color:#fff;text-align:center;
+      padding:100px 20px;
+      animation:fadeIn 1.5s;
+    }
+    .hero h1{font-size:48px;margin-bottom:10px;}
+    .hero p{font-size:20px;max-width:700px;margin:auto;}
 
     /* About Content */
-    .about-content {display: flex; align-items: center; justify-content: space-between; gap: 40px; width: 90%; margin: 60px auto; flex-wrap: wrap;}
-    .about-content .text {flex: 1; animation: slideInLeft 1s;}
-    .about-content .text h2 {color: #004aad; margin-bottom: 15px;}
-    .about-content .text p {margin-bottom: 20px;}
-    .about-content .image {flex: 1; animation: slideInRight 1s;}
-    .about-content .image img {width: 100%; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.2);}
+    .about-content{
+      display:flex;align-items:center;justify-content:space-between;
+      gap:40px;width:90%;margin:60px auto;flex-wrap:wrap;
+    }
+    .about-content .text{flex:1;animation:slideInLeft 1s;}
+    .about-content .text h2{color:#0d47a1;margin-bottom:15px;}
+    .about-content .text p{margin-bottom:20px;}
+    .about-content .image{flex:1;animation:slideInRight 1s;}
+    .about-content .image img{width:100%;border-radius:10px;box-shadow:0 5px 15px rgba(0,0,0,0.2);}
 
-    /* Highlights Section */
-    .highlights {background: #fff; padding: 60px 20px;}
-    .highlights h2 {text-align: center; color: #004aad; margin-bottom: 40px;}
-    .highlight-grid {display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; width: 90%; margin: auto;}
-    .highlight {background: #f1f7ff; padding: 30px; border-radius: 12px; text-align: center; transition: 0.3s; animation: fadeInUp 1s;}
-    .highlight i {font-size: 40px; color: #004aad; margin-bottom: 15px;}
-    .highlight h3 {margin-bottom: 10px; color: #004aad;}
-    .highlight:hover {transform: translateY(-8px); box-shadow: 0 6px 20px rgba(0,0,0,0.1);}
+    /* Highlights */
+    .highlights{background:#fff;padding:60px 20px;}
+    .highlights h2{text-align:center;color:#0d47a1;margin-bottom:40px;}
+    .highlight-grid{
+      display:grid;
+      grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+      gap:20px;width:90%;margin:auto;
+    }
+    .highlight{
+      background:#f1f7ff;
+      padding:30px;
+      border-radius:12px;
+      text-align:center;
+      transition:0.3s;
+      animation:fadeInUp 1s;
+    }
+    .highlight i{font-size:40px;color:#0d47a1;margin-bottom:15px;}
+    .highlight h3{margin-bottom:10px;color:#0d47a1;}
+    .highlight:hover{transform:translateY(-8px);box-shadow:0 6px 20px rgba(0,0,0,0.1);}
 
     /* Footer */
-    footer {background: #004aad; color: #fff; text-align: center; padding: 20px 10px; margin-top: 50px;}
-    footer p {margin-bottom: 8px;}
-    footer .social a {color: #fff; margin: 0 10px; font-size: 18px; transition: 0.3s;}
-    footer .social a:hover {color: #ffdd57;}
+    footer{background:#0d47a1;color:#fff;text-align:center;padding:20px 10px;margin-top:50px;}
+    footer p{margin-bottom:8px;}
+    footer .social a{color:#fff;margin:0 10px;font-size:18px;transition:0.3s;}
+    footer .social a:hover{color:#bbdefb;}
 
     /* Animations */
-    @keyframes fadeIn {from {opacity: 0;} to {opacity: 1;}}
-    @keyframes slideInLeft {from {opacity: 0; transform: translateX(-50px);} to {opacity: 1; transform: translateX(0);}}
-    @keyframes slideInRight {from {opacity: 0; transform: translateX(50px);} to {opacity: 1; transform: translateX(0);}}
-    @keyframes fadeInUp {from {opacity: 0; transform: translateY(30px);} to {opacity: 1; transform: translateY(0);}}
+    @keyframes fadeIn{from{opacity:0;}to{opacity:1;}}
+    @keyframes slideInLeft{from{opacity:0;transform:translateX(-50px);}to{opacity:1;transform:translateX(0);}}
+    @keyframes slideInRight{from{opacity:0;transform:translateX(50px);}to{opacity:1;transform:translateX(0);}}
+    @keyframes fadeInUp{from{opacity:0;transform:translateY(30px);}to{opacity:1;transform:translateY(0);}}
+
+    /* Responsive */
+    @media(max-width:768px){
+      .nav-links{flex-direction:column;gap:0.5rem;}
+      .navbar{flex-direction:column;align-items:flex-start;}
+      .about-content{flex-direction:column;}
+      .hero h1{font-size:32px;}
+      .hero p{font-size:16px;}
+    }
   </style>
 </head>
 <body>
