--- a/about.html
+++ b/about.html
@@ -46,14 +46,15 @@
       color:#fff;
       font-weight:600;
       position:relative;
-      padding-bottom:4px;
+      text-decoration:none; /* شيل أي خط تحت النص */
+      border:none;          /* منع أي خط ثابت */
       transition:0.3s;
     }
     .nav-links li a::after{
       content:"";
       position:absolute;
       left:0;
-      bottom:0;
+      bottom:-4px;
       width:0;
       height:2px;
       background:#bbdefb;
@@ -205,7 +206,6 @@
     <div class="social">
       <a href="#"><i class="fab fa-facebook-f"></i></a>
       <a href="#"><i class="fab fa-linkedin-in"></i></a>
-      <a href="#"><i class="fab fa-twitter"></i></a>
     </div>
   </footer>
 </body>
